[gd_scene load_steps=9 format=2]

[ext_resource path="res://theme/ThemeMain.tres" type="Theme" id=1]
[ext_resource path="res://Modules/HomeScreen/HomeScreen.gd" type="Script" id=2]
[ext_resource path="res://raw_assets/Title Screen/UI_Title_Screen_Button_Volume.png" type="Texture" id=3]
[ext_resource path="res://raw_assets/UI_Settings_base.png" type="Texture" id=4]
[ext_resource path="res://raw_assets/UI/Coots_UI_Small_Bar_Naughty_Full.png" type="Texture" id=5]
[ext_resource path="res://raw_assets/Title Screen/UI_Title_Screen_Button_Start.png" type="Texture" id=6]
[ext_resource path="res://raw_assets/Title Screen/UI_Title_Screen_Button_Credits.png" type="Texture" id=7]
[ext_resource path="res://raw_assets/Title Screen/UI_Title_Assembly.png" type="Texture" id=8]

[node name="HomeScreen" type="TextureRect"]
margin_right = 2880.0
margin_bottom = 1620.0
theme = ExtResource( 1 )
texture = ExtResource( 8 )
expand = true
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
visible = false
margin_left = 488.0
margin_top = -240.0
margin_right = 664.0
margin_bottom = -72.0
texture = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="VBoxContainer" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -55.0
margin_top = -45.5
margin_right = 55.0
margin_bottom = 45.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartButton" type="Button" parent="Menu"]
modulate = Color( 0.803922, 0.584314, 0.32549, 1 )
margin_right = 213.0
margin_bottom = 35.0
text = "START"

[node name="OptionsButton" type="Button" parent="Menu"]
margin_top = 39.0
margin_right = 213.0
margin_bottom = 74.0
text = "OPTIONS"

[node name="QuitButton" type="Button" parent="Menu"]
margin_top = 78.0
margin_right = 213.0
margin_bottom = 113.0
text = "QUIT"

[node name="TextureButton" type="TextureButton" parent="Menu"]
margin_top = 117.0
margin_right = 213.0
margin_bottom = 235.0
texture_normal = ExtResource( 5 )

[node name="Start" type="TextureButton" parent="."]
margin_left = 1246.0
margin_top = 654.0
margin_right = 1645.0
margin_bottom = 765.0
texture_normal = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Credits" type="TextureButton" parent="."]
margin_left = 1245.0
margin_top = 962.0
margin_right = 1644.0
margin_bottom = 1073.0
texture_normal = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Volume" type="TextureButton" parent="."]
margin_left = 1244.0
margin_top = 807.0
margin_right = 1643.0
margin_bottom = 918.0
texture_normal = ExtResource( 3 )

[node name="HSlider" type="HSlider" parent="."]
modulate = Color( 1, 0.992157, 0.929412, 1 )
margin_left = 1244.0
margin_top = 857.0
margin_right = 1642.0
margin_bottom = 981.0
theme = ExtResource( 1 )
min_value = -12.0
max_value = 12.0
value = 10.0

[connection signal="button_down" from="Menu/StartButton" to="." method="_on_StartButton_button_down"]
[connection signal="button_down" from="Start" to="." method="_on_Start_button_down"]
[connection signal="button_down" from="Credits" to="." method="_on_Credits_button_down"]
